--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@import "tailwindcss";
+/* @import "tailwindcss"; */
 
 @custom-variant dark (&:where(.dark, .dark *));
 
